# coq-plugin-lib

./: .gitignore  .gitmodules  LICENSE  Makefile.conf  Makefile.local  README.md  _CoqProject  build.sh  coq-plugin-lib.opam  dune-project
coq/: Test.v
src/: checking.ml  checking.mli  convertibility.ml  decompiler.mli  defutils.mli  dune  envutils.mli  filters.mli  indexing.ml  indexing.mli  inference.mli  lib.mlpack  library.ml4  modutils.ml  modutils.mli  nameutils.ml  plib.mlpack  plibrary.ml  plibrary.ml4  plugin-base.dune  printing.ml  printing.mli  proputils.mli  sigmautils.ml  sigmautils.mli  transform.ml  utilities.ml  utilities.mli  zooming.ml
src/components/differencing/: diffutils.ml  diffutils.mli
src/coq/: apputils.ml  apputils.mli  constutils.ml  contextutils.ml  contextutils.mli  convertibility.ml  coqterms.ml  coqterms.mli  debruijn.ml  defutils.ml  defutils.mli  dune  envutils.ml  envutils.mli  filters.ml  funutils.ml  funutils.mli  hofs.ml  hofs.mli  hypotheses.ml  indexing.ml  indutils.ml  indutils.mli  inference.ml  inference.mli  printing.ml  printing.mli  reducers.ml  reducers.mli  substitution.ml  substitution.mli  termutils.ml  termutils.mli  transform.ml  transform.mli  typeutils.ml  typeutils.mli  zooming.ml
src/coq/constants/: .merlin  dune  equtils.ml  equtils.mli  idutils.ml  idutils.mli  logicutils.ml  logicutils.mli  produtils.ml  produtils.mli  proputils.ml  proputils.mli  sigmautils.ml  sigmautils.mli
src/coq/decompiler/: .merlin  decompiler.ml  decompiler.mli  dune
src/coq/devutils/: .merlin  dune  printing.ml  printing.mli
src/coq/logicutils/: checking.ml  convertibility.mli  debruijn.ml  dune  hofimpls.mli  hypotheses.ml  indexing.ml  reducers.ml  reducers.mli  transform.ml  transform.mli  typeutils.ml  typeutils.mli
src/coq/logicutils/contexts/: .merlin  contextutils.ml  contextutils.mli  dune  envutils.ml  envutils.mli  modutils.ml  modutils.mli  stateutils.ml  stateutils.mli
src/coq/logicutils/contexts/envs/: .merlin  contextutils.mli  dune  envutils.ml
src/coq/logicutils/contexts/state/: .merlin  dune  stateutils.ml
src/coq/logicutils/debruijn/: .merlin  debruijn.ml  dune
src/coq/logicutils/hofs/: .merlin  debruijn.ml  debruijn.mli  dune  filters.ml  filters.mli  hofimpls.ml  hofimpls.mli  hofs.ml  hofs.mli  hypotheses.ml  hypotheses.mli  reducers.ml  reducers.mli  substitution.ml  substitution.mli  typehofs.ml  typehofs.mli  zooming.ml  zooming.mli
src/coq/logicutils/hofs/impls/: .merlin  dune  substitution.ml  substitution.mli
src/coq/logicutils/inductive/: .indutils.ml.swp  .indutils.mli.swp  .merlin  dune  indexing.ml  indexing.mli  indutils.ml  indutils.mli
src/coq/logicutils/inference/: .merlin  dune
src/coq/logicutils/transformation/: .merlin  .transform.ml.swp  dune  transform.ml  transform.mli
src/coq/logicutils/typesandequality/: .merlin  checking.ml  checking.mli  convertibility.ml  convertibility.mli  dune  inference.ml  inference.mli
src/coq/representationutils/: .merlin  defutils.ml  defutils.mli  dune  nameutils.ml  nameutils.mli
src/coq/tactok/: agent_utils.py  coq_gym.yml  dune  options.ml  options.mli  tactok.ml  tactok.mli
src/coq/terms/: termdiffutils.ml  termdiffutils.mli
src/coq/termutils/: .merlin  apputils.ml  apputils.mli  constutils.ml  constutils.mli  dune  funutils.ml  funutils.mli
src/coq/types/: typediffutils.ml  typediffutils.mli  typeutils.ml  typeutils.mli
src/coq/typeutils/: inference.mli
src/utilities/: dune  utilities.ml  utilities.mli
theories/: Lib.v  Plib.v  dune
