(library
 (name plib)
 (public_name coq-plugin-lib.plugin)
 (synopsis "Coq Plugin Lib")
 (flags :standard -w -27 -warn-error -A)       ; CoqPP codes requires this
 (modules ("plibrary"))
 (libraries
   coq.vernac                      ; needed for vernac extend
))

(rule
 (targets plibrary.ml)
 (deps (:pp-file plibrary.ml4) )
 (action (bash "camlp5 pa_o.cmo pr_o.cmo %{lib:coq.grammar:grammar.cma} -loc loc -impl %{pp-file} -o %{targets}")))
; camlp5 may need the following additional libs, YMMV
; pa_op.cmo pr_dump.cmo pa_extend.cmo q_MLast.cmo pa_macro.cmo
