(library
 (name plib)
 (public_name coq-plugin-lib.plugin)
 (synopsis "Coq Plugin Lib")
 (flags :standard -w -27 -warn-error -A)       ; CoqPP codes requires this
 (modules ("plibrary"))
 (libraries
   coq.vernac                      ; needed for vernac extend
   coq-serapi.serlib
   coq-plugin-lib.utilities
   coq-plugin-lib.coq
   coq-plugin-lib.debruijn
   coq-plugin-lib.constants
   coq-plugin-lib.decompiler
   coq-plugin-lib.devutils
   coq-plugin-lib.envs
   coq-plugin-lib.state
   coq-plugin-lib.contexts
   coq-plugin-lib.inference
   coq-plugin-lib.typesandequality
   coq-plugin-lib.transformation
   coq-plugin-lib.hofs
   coq-plugin-lib.hofimpls
   coq-plugin-lib.inductive
   coq-plugin-lib.representationutils
   coq-plugin-lib.termutils
))

(rule
  (targets plib_full_plugin.cmxs)
  (action (run %{ocamlopt} -shared -linkall -o %{targets})))
  
(install
  (section lib_root)
  (package coq-plugin-lib)
  (files
    (plib_full_plugin.cmxs as coq/user-contrib/plib_full_plugin.cmxs))) 

(rule
 (targets plibrary.ml)
 (deps (:pp-file plibrary.ml4) )
 (action (bash "camlp5 pa_o.cmo pr_o.cmo %{lib:coq.grammar:grammar.cma} -loc loc -impl %{pp-file} -o %{targets}")))
; camlp5 may need the following additional libs, YMMV
; pa_op.cmo pr_dump.cmo pa_extend.cmo q_MLast.cmo pa_macro.cmo
