(library
 (name plib)
 (public_name coq-plugin-lib.plugin)
 (synopsis "Coq Plugin Lib")
 (flags :standard -w -27 -warn-error -A)       ; CoqPP codes requires this
 (modules ("plibrary"))
 (library_flags -linkall)
 (libraries
   coq.vernac                      ; needed for vernac extend
   coq.plugins.ltac                ; needed only for tactic extend
   coq-serapi.serlib
   coq-plugin-lib.utilities
   coq-plugin-lib.coq
   coq-plugin-lib.debruijn
   coq-plugin-lib.constants
   coq-plugin-lib.decompiler
   coq-plugin-lib.devutils
   coq-plugin-lib.envs
   coq-plugin-lib.state
   coq-plugin-lib.contexts
   coq-plugin-lib.inference
   coq-plugin-lib.typesandequality
   coq-plugin-lib.transformation
   coq-plugin-lib.hofs
   coq-plugin-lib.hofimpls
   coq-plugin-lib.inductive
   coq-plugin-lib.representationutils
   coq-plugin-lib.termutils
   lymp
))

(rule
 (targets plibrary.ml)
 (deps (:pp-file plibrary.ml4) )
 (action (bash "camlp5 pa_o.cmo pr_o.cmo pa_op.cmo pr_dump.cmo pa_extend.cmo q_MLast.cmo pa_macro.cmo pa_op.cmo pr_dump.cmo pa_extend.cmo q_MLast.cmo pa_macro.cmo %{lib:coq.grammar:grammar.cma} -loc loc -impl %{pp-file} -o %{targets}")))

(rule
  (targets plib_full_plugin.cmxs)
  (action (run %{ocamlopt} -shared -linkall -o %{targets}
           %{lib:lymp:lymp.cmxa}
           %{lib:coq.plugins.ltac:ltac_plugin.cmx}
           %{lib:coq-plugin-lib.utilities:utilities.cmxa}
           %{lib:coq-plugin-lib.representationutils:representationutils.cmxa}
           %{lib:coq-plugin-lib.state:state.cmxa}
           %{lib:coq-plugin-lib.termutils:termutils.cmxa}
           %{lib:coq-plugin-lib.inference:inference.cmxa}
           %{lib:coq-plugin-lib.constants:constants.cmxa}
           %{lib:coq-plugin-lib.envs:envs.cmxa}
           %{lib:coq-plugin-lib.typesandequality:typesandequality.cmxa}
           %{lib:coq-plugin-lib.hofs:hofs.cmxa}
           %{lib:coq-plugin-lib.debruijn:debruijn.cmxa}
           %{lib:coq-plugin-lib.hofimpls:hofimpls.cmxa}
           %{lib:coq-plugin-lib.inductive:inductive.cmxa}
           %{lib:coq-plugin-lib.contexts:contexts.cmxa}
           %{lib:coq-plugin-lib.transformation:transformation.cmxa}
           %{lib:coq-plugin-lib.devutils:devutils.cmxa}
           %{lib:coq-plugin-lib.decompiler:decompiler.cmxa}
           %{lib:coq-plugin-lib.coq:coq.cmxa}
           %{cmxa:plib})))

(install
  (section lib_root)
  (package coq-plugin-lib)
  (files
    (plib_full_plugin.cmxs as coq/user-contrib/plib_full_plugin.cmxs))) 
